--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
-            src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg"
+            src="https://upload.wikimedia.org/wikipedia/commons/a/aa/V-logo.svg"
             width="30"
             height="30"
             alt=""
@@ -25,42 +25,37 @@
         </a>
       </div>
     </nav>
-    <div class="container">
-      <!-- Input to LocalStorage -->
-      <h3 class="mt-3">LocalStorageJS</h3>
-      <form class="row row-cols-md-auto g-3 align-items-center mt-5" id="orderForm">
-        <div class="col-12">
-          <label class="sr-only" for="inKey">Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="inKey"
-            placeholder="Input Key"
-          />
-        </div>
-        <div class="col-12">
-          <label class="sr-only" for="inVal">Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="inVal"
-            placeholder="Input Value"
-          />
-        </div>
-        <div class="col-12">
-          <button type="submit" class="btn btn-secondary" id="btnInsert">
-            Submit
-          </button>
-          <button type="submit" class="btn btn-danger" id="btnClear">
-            Clear Data
-          </button>
-        </div>
-      </form>
-
-      <!-- Output from LocalStorage -->
-      <div id="localStorageOutput"></div>
-
+    <div class="container mt-4">
+      <h1 class="display-4 text-center">
+        <i class="fas fa-book-open text-primary"></i> Local <span class="text-primary">Vanilla</span></h1>
+        <form id="book-form">
+          <div class="form-group">
+            <label for="title">Nama Depan</label>
+            <input type="text" id="fname" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="author">Nama Belakang</label>
+            <input type="text" id="lname" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="isbn">Nomor HP</label>
+            <input type="number" id="phone" class="form-control">
+          </div>
+          <input type="submit" value="Add Book" class="btn btn-primary btn-block mt-2">
+        </form>
+        <table class="table table-striped mt-5">
+          <thead>
+            <tr>
+              <th>Nama Depan</th>
+              <th>Nama Belakang</th>
+              <th>Nomor HP</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody id="book-list"></tbody>
+        </table>
     </div>
+  
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
